force-app/main/default/objects/FEC_Product_Type__c/FEC_Product_Type__c.object-meta.xml
<CustomObject>
    <description>Là loại sản phẩm trong bộ Nature of Case</description>
    <label>Product Type</label>
    <nameField>
        <label>Product Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>