force-app/main/default/objects/FEC_Product_Type__c/fields/FEC_Alias__c.field-meta.xml
<CustomField>
    <fullName>FEC_Alias__c</fullName>
    <description>Mã Code sản phẩm (BU có thể chỉnh sửa)</description>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>