force-app/main/default/objects/FEC_Product_Type__c/listViews/All_Product_Types.listView-meta.xml
<ListView>
    <fullName>All_Product_Types</fullName>
    <columns>NAME</columns>
    <columns>FEC_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Types</label>
</ListView>